update the dto structure
